# modwrap

./: README.md  pyproject.toml
examples/: shell.py
modwrap/: console.py  core.py  utils.py
src/modwrap/: module.py
tests/: plugin.py  test_core.py
