[project]
name = "modwrap"
version = "1.1.4"
description = "Python module wrapper for dynamic loading and callable signature validation."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
maintainers = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["wrapper", "module", "code", "dynamic", "loading", "signature", "validation"]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<4.0"
dependencies = [
]

[project.urls]
repository = "https://github.com/n3rada/modwrap"

[build-system]
requires = ["poetry-core>=2.1.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
